<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Products</string>

    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all products data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title for the activity to add a new prod [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_prod">Add a Product</string>

    <!-- Label for editor menu option to save prod and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current prod [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_des">Description</string>

    <!-- Label for supplier information in the editor [CHAR LIMIT=30] -->
    <string name="supp">Supplier</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_prod_name">Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="price">Price</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="quantity">Quantity</string>

    <!-- Text hint for phone number in the editor [CHAR LIMIT=30] -->
    <string name="hint_phone">Phone Number</string>

    <!-- Currency for price [CHAR LIMIT=5] -->
    <string name="currency">$</string>

    <!-- Label for dropdown menu option if supplier is Mark (Main supplier - default) [CHAR LIMIT=20] -->
    <string name="supp_mark">Mark</string>

    <!-- Label for dropdown menu option if supplier is John [CHAR LIMIT=20] -->
    <string name="supp_john">John</string>

    <!-- Label for dropdown menu option if supplier is Ann[CHAR LIMIT=20] -->
    <string name="supp_ann">Ann</string>


    <!-- Toast message in editor when new prod has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_prod_successful">Product saved</string>

    <!-- Toast message in editor when new prod has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_prod_failed">Error with saving product</string>

    <!-- Title text for the empty view, which describes image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">There is no products in database</string>

    <!-- Subtitle text for the empty view that prompts the user to add a prod [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Title for the activity to edit an existing prod [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_prod">Edit Prod</string>

    <!-- Toast message in editor when current prod was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_prod_successful">Product updated</string>

    <!-- Toast message in editor when current prod has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_prod_failed">Error with updating product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current prod [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current prod was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_prod_successful">Product deleted</string>

    <!-- Toast message in editor when current prod has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_prod_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current prod [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current prod [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current prod [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

</resources>
